tests/tsc-references/internalModules/importDeclarations/invalidImportAliasIdentifiers/input.ts/es5.1.normal/output.js
function _classCallCheck(instance, Constructor) {
    if (!(instance instanceof Constructor)) {
        throw new TypeError("Cannot call a class as a function");
    }
}
// none of these should work, since non are actually modules
var V = 12;
var C = function C() {
    "use strict";
    _classCallCheck(this, C);
};
var E1;
(function(E) {
    E[E["Red"] = 0] = "Red";
    E[E["Blue"] = 1] = "Blue";
})(E1 || (E1 = {
}));
export { };
